# mmwave-rewrite

./: .gitignore  Cargo.nix  Cargo.toml  README.md  build.rs  common.nix  config_out.json  flake.nix  generator.nix  json.json  nats_server.sh  out.json  package.nix  pi4.nix  profile_AWR1843.cfg  profile_AWR1843B.cfg  profile_AWR1843_AOP_old.cfg  recording_out.json
.archive/a1/client/: Cargo.toml
.archive/a1/radars/src/: pointcloud.rs  transform.rs  zed_device.rs
.archive/a1/server/: Cargo.toml  config.json
.archive/a1/server/src/: message.rs
.archive/a1/ti_device/src/: manager.rs
.archive/a1/zed_device/: Cargo.toml  docker-compose.yml
.archive/a2/core/: config.rs  data.rs  mod.rs  transform.rs
.archive/a2/devices/: mod.rs
.archive/a2/devices/awr/: error.rs  mod.rs
.archive/a2/devices/visualiser/: mod.rs
.archive/a2/devices/zed/: mod.rs
.archive/a2/devices/zed/zed/cpp/: zed_interface_main.cpp
.archive/sensor_archive/playback/: mod.rs
.devenv/: profile  run
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: cpm2l6vgs2rjc7af1da8lb63bdvhv7h2-source  fnrwbhn3226kkci180knzk9zwkp1lgrn-source  wk5dq7iwpd8yb4mnhb98k687kgdqachh-source
.github/workflows/: CI.yml  rust.yml
.ssh/: id_ed25519  id_ed25519.pub
archive/radars/: Cargo.toml
archive/radars/src/: lib.rs  playback_device.rs
archive/server/src/: main.rs
archive/visualiser/src/: main.rs
archive/zed_device/: dockerfile
archive/zed_device/cpp/: zed_interface.h
archive/zed_device/src/: lib.rs  zed.rs
archive2/: lib.rs
archive2/core/: accumulator.rs  message.rs  pointcloud.rs  relay.rs  transform.rs
archive2/devices/awr/: connection.rs
archive2/devices/recorder/: mod.rs
client/: Cargo.toml
client/src/: main.rs
config_files/: config.json  easy_config.sh  new_config.json  profile_AWR1843_AOP.cfg  test_config.json
crates/mmwave-awr/: Cargo.toml
crates/mmwave-awr/src/: connection.rs  error.rs  lib.rs  message.rs
crates/mmwave-core/: Cargo.toml
crates/mmwave-core/src/: address.rs  config.rs  devices.rs  lib.rs  logging.rs  message.rs  nats.rs  point.rs  pointcloud.rs  transform.rs
crates/mmwave-dashboard/: Cargo.toml  config_out.json
crates/mmwave-dashboard/src/: configuration.rs  main.rs
crates/mmwave-discovery/: Cargo.toml
crates/mmwave-discovery/src/: main.rs
crates/mmwave-machine/: Cargo.toml
crates/mmwave-machine/src/: args.rs  main.rs
crates/mmwave-playback/: Cargo.toml
crates/mmwave-playback/src/: lib.rs
crates/mmwave-recorder/: Cargo.toml
crates/mmwave-recorder/src/: lib.rs
crates/mmwave-zed/: Cargo.toml  build.rs
crates/mmwave-zed/src/: lib.rs  zed.rs
dataflow_example/node/: Cargo.toml
dataflow_example/operator/: Cargo.toml
dataflow_example/orchestrator/: Cargo.toml
dataflow_example/sink/: Cargo.toml
derive_from_bytes/: Cargo.toml
derive_from_bytes/src/: lib.rs
dora/aggregator/: Cargo.toml
dora/aggregator/src/: main.rs
dora/orchestrator/: Cargo.toml  dataflow.yml
dora/orchestrator/src/: main.rs
dora/radar_client/: Cargo.toml
dora/radar_client/src/: main.rs
formats/: sd-aarch64.nix
radar_device/: Cargo.toml
radar_device/src/: config.rs  connection.rs  lib.rs  main.rs  manager.rs  message.rs  pointcloud.rs  radar.rs
radars/: Cargo.toml
radars/src/: awr_device.rs  config.rs  lib.rs  manager.rs  playback_device.rs  pointcloud.rs  pointcloud_provider.rs  transform.rs  zed_device.rs
recordings/: recording4.1.json
sensor_archive/awr/: mod.rs
server/: Cargo.toml  config.json  configbackup.json  produced_config.json
server/src/: buffer.rs  main.rs  message.rs
src/: connection.rs  error.rs  lib.rs  main.rs  message.rs  radar.rs
src/core/: accumulator.rs  config.rs  data.rs  manager.rs  message.rs  mod.rs  point.rs  pointcloud.rs  relay.rs
src/devices/: mod.rs
src/devices/awr/: connection.rs  message.rs  mod.rs
src/devices/zed/zed/: mod.rs
src/devices/zed/zed/cpp/: CMakeLists.txt  zed_interface.cpp
src/sensors/: mod.rs
src/sensors/awr/: message.rs  mod.rs
src/sensors/playback/: mod.rs
src/sensors/zed/: mod.rs
ti_device/: Cargo.toml
ti_device/src/: config.rs  error.rs  lib.rs  main.rs  message.rs  radar.rs
visualiser/: Cargo.toml
visualiser/src/: main.rs
zed_device/: Cargo.toml  build.rs
zed_device/cpp/: zed_interface.cpp
zed_device/src/: main.rs  zed.rs
