[package]
name = "mmwave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.7.4", features=["ws"]}
error = "0.1.9"
futures-util = "0.3.30"
libc = "0.2.153"
ndarray = "0.15.6"
nix = "0.28.0"
regex = "1.10.3"
reqwest = "0.11.24"
rusb = "0.9.3"
searchlight = "0.3.2"
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
serialport = "4.3.0"
simple-dns = "0.7.0"
tokio = {version="1.36.0", features=["full"]}
tokio-tungstenite = "0.21.0"
udev = "0.8.0"

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true

[build]
script = "build.rs"

[features]
zed_camera = []

[[bin]]
name = "sensor"
path = "src/bin/client/sensor/sensor.rs"

[[bin]]
name = "dashboard"
path = "src/bin/client/dashboard/dashboard.rs"

[[bin]]
name = "server"
path = "src/bin/server/server.rs"
