[workspace]
resolver = "2"
members = [
  "crates/mmwave-awr",
  "crates/mmwave-core",
  "crates/mmwave-recorder",
  "crates/mmwave-discovery",
  "crates/mmwave-machine"
]

[workspace.dependencies]
thiserror = "1.0.61"
async-trait = "0.1.80"
axum = {version="0.7.4", features=["ws"]}
chrono = { version = "0.4.37", features = ["serde"] }
clap = {version="4.5.4", features=["derive"]}
crossterm = "0.27.0"
dyn-clone = "1.0.17"
error = "0.1.9"
futures = "0.3.30"
futures-util = "0.3.30"
indicatif = "0.17.8"
libc = "0.2.153"
ndarray = "0.15.6"
nix = "0.28.0"
rand = "0.8.5"
regex = "1.10.3"
reqwest = "0.11.24"
rusb = "0.9.3"
searchlight = "0.3.2"
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
serialport = "4.3.0"
simple-dns = "0.7.0"
tokio = {version="1.36.0", features=["full"]}
tokio-stream = "0.1.15"
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typetag = "0.2.16"
udev = "0.8.0"
async-nats = "0.35.1"
bincode = "1.3.3"

# [build-dependencies]
# cc = "1.0"

# [profile.release]
# lto = true

# [build]
# script = "build.rs"

# [features]
# zed_camera = []

# [[bin]]
# name = "device_manager"
# path = "src/bin/client/device_manager/device_manager.rs"

# [[bin]]
# name = "dashboard"
# path = "src/bin/client/dashboard/dashboard.rs"

# [[bin]]
# name = "server"
# path = "src/bin/server/server.rs"
