[workspace]
resolver = "2"
members = [
  "crates/mmwave-awr",
  "crates/mmwave-core",
  "crates/mmwave-recorder",
  "crates/mmwave-discovery",
  "crates/mmwave-machine", 
  "crates/mmwave-dashboard"
]

[workspace.dependencies]
thiserror = "1.0.61"
async-trait = "0.1.80"
chrono = { version = "0.4.37", features = ["serde"] }
clap = {version="4.5.4", features=["derive"]}
futures = "0.3.30"
indicatif = "0.17.8"
ndarray = "0.15.6"
regex = "1.10.3"
reqwest = "0.11.24"
searchlight = "0.3.2"
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
serialport = "4.3.0"
tokio = {version="1.36.0", features=["full"]}
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typetag = "0.2.16"
udev = "0.8.0"
async-nats = "0.35.1"
bincode = "1.3.3"
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence"
] }
egui = "0.27.0"
egui_plot = "0.27.0"
egui_file = "0.17.0"
wasm-bindgen-futures = "0.4"

# [build-dependencies]
# cc = "1.0"

# [profile.release]
# lto = true

# [build]
# script = "build.rs"

# [features]
# zed_camera = []

# [[bin]]
# name = "device_manager"
# path = "src/bin/client/device_manager/device_manager.rs"

# [[bin]]
# name = "dashboard"
# path = "src/bin/client/dashboard/dashboard.rs"

# [[bin]]
# name = "server"
# path = "src/bin/server/server.rs"
