[package]
name = "client"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
tokio = { version="1.35.1", features=["full"] }
tokio-tungstenite = "0.21.0"
serde = { version="1.0.195", features=["derive"] }
serde_json = "1.0.111"
url = "2.5.0"
radars = { path = "../radars" }
server = { path = "../server" }
bincode = "1.3.3"
