[package]
name = "radars"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.111"
ti_device = { path = "../ti_device" }
tokio = "1.35.1"
tokio-stream = "0.1.14"
