[package]
name = "ti_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version="1.0.75", features=["backtrace"]}
bincode = "1.3.3"
libudev = "0.3.0"
regex = "1.10.2"
rusb = "0.9.3"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.111"
serialport = "4.2.2"
tokio = {version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"]}
tokio-stream = "0.1.14"
udev = "0.8.0"
# derive_from_bytes = { path = "./derive_from_bytes" }
