[package]
name = "visualiser"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
tokio = {version="1.35.1", features=["full"]}
tui = "0.19.0"
radars = { path = "../radars" }
serde = { version="1.0.195", features=["derive"] }
serde_json = "1.0.111"
