[package]
name = "zed_device"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[build]
script = "build.rs"
