[package]
name = "zed_device"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.111"

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true

[build]
script = "build.rs"
