[package]
name = "mmwave-awr"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats.workspace = true
futures.workspace = true
tokio.workspace = true
mmwave-core = { path = "../mmwave-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
typetag.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
serialport.workspace = true
udev.workspace = true
chrono.workspace = true
