[package]
name = "mmwave-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
indicatif.workspace = true
serde.workspace = true
thiserror.workspace = true
bincode.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
searchlight.workspace = true
async-nats.workspace = true
typetag.workspace = true
async-trait.workspace = true
ndarray.workspace = true
serde_json.workspace = true
egui.workspace = true
