[package]
name = "mmwave-dashboard"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats.workspace = true
bincode.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
mmwave-core = { path = "../mmwave-core" }
egui_plot.workspace = true
serde_json.workspace = true
mmwave-awr.workspace = true
mmwave-recorder.workspace = true
mmwave-zed.workspace = true
mmwave-playback.workspace = true
chrono.workspace = true
