[package]
name = "mmwave-discovery"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
searchlight.workspace = true
tracing.workspace = true
mmwave-core = { path = "../mmwave-core" }
