[package]
name = "mmwave-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats.workspace = true
bincode.workspace = true
clap.workspace = true
futures.workspace = true
mmwave-core = { path = "../mmwave-core" }
mmwave-awr = { path = "../mmwave-awr" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
