[package]
name = "mmwave-machine"
version.workspace = true
edition = "2021"

[dependencies]
async-nats.workspace = true
bincode.workspace = true
clap.workspace = true
futures.workspace = true
mmwave-core = { path = "../mmwave-core" }
mmwave-awr = { path = "../mmwave-awr" }
mmwave-zed = { path = "../mmwave-zed" }
mmwave-recorder = {  path = "../mmwave-recorder" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-ctrlc.workspace = true
