[package]
name = "mmwave-machine"
version.workspace = true
edition = "2021"

[dependencies]
async-nats.workspace = true
bincode.workspace = true
clap.workspace = true
futures.workspace = true
mmwave-core.workspace = true
mmwave-awr.workspace = true
mmwave-zed.workspace = true
mmwave-playback.workspace = true
mmwave-recorder.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-ctrlc.workspace = true
