[package]
name = "mmwave-zed"
edition = "2021"
version.workspace = true

[dependencies]
async-nats.workspace = true
async-trait.workspace = true
bincode.workspace = true
chrono.workspace = true
egui.workspace = true
futures.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
typetag.workspace = true
mmwave-core = { path = "../mmwave-core" }

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true

[build]
script = "build.rs"

[features]
zed_camera = []
