[package]
name = "orchestrator"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-daemon = { workspace = true }
clap = { version = "4.4.12", features = ["derive"] }
eyre = "0.6.11"
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
