[package]
name = "server"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.7.3", features=["ws"] }
serde = { version="1.0.195", features=["derive"] }
serde_json = "1.0.111"
tokio = { version="1.35.1", features=["full"] }
tokio-stream = "0.1.14"
ti_device = { path = "../ti_device" }
radars = { path = "../radars" }
bincode = "1.3.3"
